[tool.poetry]
name = "ranker"
version = "0.1.0"
description = ""
authors = ["Bal Narendra Sapa <bnsapa2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
flask-login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
